--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <title>Swing Scanner — Signals</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <style>
-    body{font-family:Inter,system-ui,Arial;margin:18px;background:#0b1020;color:#e6eef8}
-    h1{font-size:20px;margin-bottom:6px}
-    .meta{color:#9fb0d7;margin-bottom:14px}
-    table{width:100%;border-collapse:collapse;background:#071028}
-    th,td{padding:10px;border-bottom:1px solid rgba(255,255,255,0.03);text-align:left}
-    th{background:#041225;color:#9ec5ff;font-weight:600}
-    tr:hover td{background:rgba(255,255,255,0.01)}
-    .empty{color:#9fb0d7;padding:20px;background:#071725;border-radius:6px}
-    .small{font-size:12px;color:#98b6d8}
-  </style>
-</head>
-<body>
-  <h1>Swing Scanner — Latest Signals</h1>
-  <div class="meta small">This page loads <code>/signals.json</code> from the repository and shows latest signals. Auto-refresh every 60s.</div>
-  <div id="content"><div class="empty">Loading signals…</div></div>
-
 <script>
+async function fetchSignals() {
+  // Try site-relative first (fast if pages serves it)
+  const candidates = [
+    '/signals.json',
+    // fallback to raw GitHub content (works even if pages hasn't published yet)
+    'https://raw.githubusercontent.com/PYHTHRADER/swing-trade-filter-by-momin/main/signals.json'
+  ];
+
+  for (const url of candidates) {
+    try {
+      const res = await fetch(url, { cache: "no-store" });
+      if (!res.ok) throw new Error('HTTP ' + res.status);
+      const data = await res.json();
+      return data;
+    } catch (err) {
+      continue;
+    }
+  }
+  throw new Error('All fetch attempts failed');
+}
+
 async function fetchAndRender(){
   const content = document.getElementById('content');
   try{
-    const res = await fetch('/signals.json', {cache: "no-store"});
-    if(!res.ok) throw new Error('No signals.json found (HTTP ' + res.status + ')');
-    const data = await res.json();
+    const data = await fetchSignals();
     const signals = (data.signals && data.signals.length) ? data.signals : [];
     const gen = data.date || data.generated_at || (new Date()).toISOString();
 
@@ -63,6 +59,3 @@ async function fetchAndRender(){
 fetchAndRender();
 setInterval(fetchAndRender, 60000);
 </script>
-</body>
-</html>
-
